--- a/variants/2.3.18-alpine-3.4/Dockerfile
+++ b/variants/2.3.18-alpine-3.4/Dockerfile
@@ -1,6 +1,8 @@
 FROM alpine:3.4
 
-RUN apk add --no-cache openvpn>=2.3.18 iptables
+RUN set -eux; \
+    apk add --no-cache openvpn>=2.3.18 iptables \
+    openvpn --version
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
 RUN chmod +x /docker-entrypoint.sh
