--- a/variants/2.4.11-alpine-3.11/Dockerfile
+++ b/variants/2.4.11-alpine-3.11/Dockerfile
@@ -1,6 +1,8 @@
 FROM alpine:3.11
 
-RUN apk add --no-cache openvpn~=2.4.11 iptables
+RUN set -eux; \
+    apk add --no-cache openvpn~=2.4.11 iptables \
+    openvpn --version
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
 RUN chmod +x /docker-entrypoint.sh
