--- a/variants/2.4.4-alpine-3.6/Dockerfile
+++ b/variants/2.4.4-alpine-3.6/Dockerfile
@@ -1,6 +1,8 @@
 FROM alpine:3.6
 
-RUN apk add --no-cache openvpn>=2.4.4 iptables
+RUN set -eux; \
+    apk add --no-cache openvpn>=2.4.4 iptables \
+    openvpn --version
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
 RUN chmod +x /docker-entrypoint.sh
