--- a/variants/2.5.8-alpine-3.17/Dockerfile
+++ b/variants/2.5.8-alpine-3.17/Dockerfile
@@ -1,6 +1,8 @@
 FROM alpine:3.17
 
-RUN apk add --no-cache openvpn~=2.5.8 iptables
+RUN set -eux; \
+    apk add --no-cache openvpn~=2.5.8 iptables \
+    openvpn --version
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
 RUN chmod +x /docker-entrypoint.sh
